feature: implementação inicial do RestControllerAdvice para centralizar o tratamento de exceções

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
    application:
       name: supply-core
+   mvc:
+      problemdetails:
+         enabled: true
    datasource:
       url: jdbc:h2:./data/supply_core_dev
       driver-class-name: org.h2.Driver
